--- a/styles/section2styles.css
+++ b/styles/section2styles.css
@@ -23,6 +23,11 @@
 
 .work-images{
     border-radius: 500px;
+    transition: opacity, 0.3s;
+}
+
+.work-images:hover{
+    opacity: 0.7;
 }
 
 li{
