Added Interactive Todo List

--- a/styles/section3styles.css
+++ b/styles/section3styles.css
@@ -7,6 +7,7 @@
     border-width: 0px;
     transition: box-shadow, 0.3s;
     margin: auto;
+    margin-bottom: 15px;
 }
 
 .project-container:hover{
@@ -35,6 +36,8 @@
 .project-description{
     text-align: center;
     margin-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
