--- a/styles/section1styles.css
+++ b/styles/section1styles.css
@@ -46,8 +46,9 @@ p{
     border-style: solid;
     border-width: 2px;
     border-radius: 5px;
-    border-color: gray;
+    border-color: rgb(0, 0, 0);
     width: 250px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .spacing{
