--- a/styles/section2styles.css
+++ b/styles/section2styles.css
@@ -1,6 +1,7 @@
 .work-containers{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .work-block{
@@ -10,6 +11,7 @@
     gap: 50px;
     margin-left: 100px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .work-title{
